org.csstudio.sns.jms2rdb: Message IDs generated by RDB, not in program, to allow multiple concurrent message writers.