@@ -1,3 +1,10 @@
+/*******************************************************************************
+ * Copyright (c) 2010 Oak Ridge National Laboratory.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ ******************************************************************************/
 package org.csstudio.sns.jms2rdb.rdb;
 
 import java.sql.Connection;
@@ -17,6 +24,7 @@ import org.csstudio.platform.data.TimestampFactory;
 import org.csstudio.platform.logging.CentralLogger;
 import org.csstudio.platform.logging.JMSLogMessage;
 import org.csstudio.platform.utility.rdb.RDBUtil;
+import org.csstudio.platform.utility.rdb.RDBUtil.Dialect;
 
 /** Class that writes JMSLogMessages to the RDB
  *  @author Kay Kasemir
@@ -28,8 +36,8 @@ public class RDBWriter
 	private static final int MAX_VALUE_LENGTH = 100;
 
     private static final int MAX_NAME_LENGTH = 80;
-	
-    /** Enable statistics for Jeff Patton ? */
+
+    /** Enable Oracle statistics? */
 	private static final boolean enable_trace = false;
 
 	/** Log4J logger */
@@ -37,26 +45,23 @@ public class RDBWriter
 
     /** RDB Utility */
     final private RDBUtil rdb_util;
-    
+
     /** SQL statements */
     final private SQL sql;
-    
+
     /** Date format to use for log message time stamps */
     final private SimpleDateFormat date_format =
         new SimpleDateFormat(JMSLogMessage.DATE_FORMAT);
-    
+
     /** Map of Property IDs, mapping property name to numeric ID */
-    final private HashMap<String, Integer> properties = 
+    final private HashMap<String, Integer> properties =
     	new HashMap<String, Integer>();
-    
+
     /** Lazily initialized statement */
     private PreparedStatement next_message_id_statement;
 
     /** Lazily initialized statement */
     private PreparedStatement insert_message_statement;
-
-    /** Lazily initialized statement */
-    private PreparedStatement next_property_id;
 
     /** Lazily initialized statement */
     private PreparedStatement insert_property_statement;
@@ -77,7 +82,7 @@ public class RDBWriter
         {
             throw new Exception("Error connecting to '" + url + "': " + ex.getMessage());
         }
-        
+
         if (enable_trace)
         {
             final Statement statement = rdb_util.getConnection().createStatement();
@@ -85,20 +90,23 @@ public class RDBWriter
             statement.execute("ALTER SESSION SET events " +
                     "'10046 trace name context forever, level 12'");
         }
-        
+
         sql = new SQL(rdb_util, schema);
 
         final Connection connection = rdb_util.getConnection();
-        next_message_id_statement =
-            connection.prepareStatement(sql.select_next_message_id);
+        // Handle commits in code, not automatically
+        connection.setAutoCommit(false);
+
+        if (sql.select_next_message_id != null)
+            next_message_id_statement =
+                connection.prepareStatement(sql.select_next_message_id);
         insert_message_statement =
-            connection.prepareStatement(sql.insert_message_id_datum_type_name_severity);
-        next_property_id =
-            connection.prepareStatement(sql.select_next_content_id);
+            connection.prepareStatement(sql.insert_message_id_datum_type_name_severity,
+                    Statement.RETURN_GENERATED_KEYS);
         insert_property_statement =
             connection.prepareStatement(sql.insert_message_property_value);
     }
-    
+
     /** Get numeric ID of a property, using either the local cache
      *  or querying the RDB.
      *  @param property_name
@@ -112,8 +120,9 @@ public class RDBWriter
     	if (int_id != null)
     		return int_id.intValue();
     	// Perform RDB query
+        final Connection connection = rdb_util.getConnection();
         PreparedStatement statement =
-            rdb_util.getConnection().prepareStatement(sql.select_property_id_by_name);
+            connection.prepareStatement(sql.select_property_id_by_name);
         statement.setString(1, property_name);
         try
         {
@@ -121,7 +130,7 @@ public class RDBWriter
             if (result.next())
             {	// Add to cache
             	final int id = result.getInt(1);
-                properties.put(property_name, new Integer(id));
+                properties.put(property_name, Integer.valueOf(id));
 				return id;
             }
         }
@@ -130,8 +139,13 @@ public class RDBWriter
             statement.close();
         }
         // Insert unknown message property: Get next ID
-        statement =
-            rdb_util.getConnection().prepareStatement(sql.select_next_property_id);
+        // This does not use a sequence!
+        // Fundamentally, there is a small chance that multiple instances
+        // of this program will try to create duplicate property entries.
+        // In reality, it probably doesn't matter.
+        // Since we wrap the whole one-message-write into a transaction,
+        // the worst case would be one lost message because of a property ID clash.
+        statement = connection.prepareStatement(sql.select_next_property_id);
         int next_id;
         try
         {
@@ -145,8 +159,7 @@ public class RDBWriter
         {
             statement.close();
         }
-        statement =
-            rdb_util.getConnection().prepareStatement(sql.insert_property_id);
+        statement = connection.prepareStatement(sql.insert_property_id);
         statement.setInt(1, next_id);
         statement.setString(2, property_name);
         try
@@ -161,8 +174,8 @@ public class RDBWriter
     		"Inserted unkown Message Property " + property_name + " as ID "
     		+ next_id);
         // Add to cache
-    	properties.put(property_name, new Integer(next_id));
-		return next_id;    
+    	properties.put(property_name, Integer.valueOf(next_id));
+		return next_id;
 	}
 
     /** Close the RDB connection */
@@ -195,7 +208,7 @@ public class RDBWriter
             catch (Exception ex)
             { /* Ignore */ }
         }
-        
+
         if (enable_trace)
         {
             try
@@ -208,7 +221,7 @@ public class RDBWriter
                 ex.printStackTrace();
             }
         }
-        
+
         rdb_util.close();
     }
 
@@ -218,36 +231,27 @@ public class RDBWriter
      */
     public void write(final JMSLogMessage message) throws Exception
     {
-        final int message_id = getNextMessageID();
-        insertMessage(message_id, JMSLogMessage.TYPE_LOG, message.getMethodName(),
-        		message.getSeverity());
-        // Since batched inserts are only performed at the end,
-        // a 'select' for the next content ID won't see them, yet.
-        // So we have to count them up in here
-        int content_id = getNextContentID();
-        if (batchProperty(message_id, content_id, 
-        		JMSLogMessage.TEXT, message.getText()))
-            ++content_id;
-        if (batchProperty(message_id, content_id, 
-        		JMSLogMessage.CREATETIME,
-            date_format.format(message.getCreateTime().getTime())))
-            ++content_id;
-        if (batchProperty(message_id, content_id, 
-        		JMSLogMessage.CLASS, message.getClassName()))
-            ++content_id;
-        if (batchProperty(message_id, content_id, 
-        		JMSLogMessage.FILENAME, message.getFileName()))
-            ++content_id;
-        if (batchProperty(message_id, content_id, 
-        		JMSLogMessage.APPLICATION_ID, message.getApplicationID()))
-            ++content_id;
-        if (batchProperty(message_id, content_id, 
-        		JMSLogMessage.HOST, message.getHost()))
-            ++content_id;
-        batchProperty(message_id, content_id, 
-        		JMSLogMessage.USER, message.getUser());
-        insert_property_statement.executeBatch();
-        rdb_util.getConnection().commit();
+        final Connection connection = rdb_util.getConnection();
+        try
+        {
+            final long message_id = insertMessage(JMSLogMessage.TYPE_LOG, message.getMethodName(),
+            		message.getSeverity());
+            batchProperty(message_id, JMSLogMessage.TEXT, message.getText());
+            batchProperty(message_id, JMSLogMessage.CREATETIME,
+                    date_format.format(message.getCreateTime().getTime()));
+            batchProperty(message_id, JMSLogMessage.CLASS, message.getClassName());
+            batchProperty(message_id, JMSLogMessage.FILENAME, message.getFileName());
+            batchProperty(message_id, JMSLogMessage.APPLICATION_ID, message.getApplicationID());
+            batchProperty(message_id, JMSLogMessage.HOST, message.getHost());
+            batchProperty(message_id, JMSLogMessage.USER, message.getUser());
+            insert_property_statement.executeBatch();
+            connection.commit();
+        }
+        catch (Exception ex)
+        {
+            connection.rollback();
+            throw ex;
+        }
     }
 
     /** Write log message to RDB
@@ -257,61 +261,65 @@ public class RDBWriter
     @SuppressWarnings("unchecked")
 	public void write(final MapMessage map) throws Exception
     {
-        final int message_id = getNextMessageID();
-		String type = map.getString(JMSLogMessage.TYPE);
-		String name = map.getString(JMSLogMessage.NAME);
-        String severity = map.getString(JMSLogMessage.SEVERITY);
-		insertMessage(message_id, type, name, severity);
-        // Since batched inserts are only performed at the end,
-        // a 'select' for the next content ID won't see them, yet.
-        // So we have to count them up in here.
-		// If the message_content.id was auto-generated
-		// (MySQL AUTO_INC, Oracle sequence) we could skip this step.
-        int content_id = getNextContentID();
-        final Enumeration<String> props = map.getMapNames();
-        while (props.hasMoreElements())
-        {
-        	final String prop = props.nextElement();
-        	// Skip properties which are already in message table columns
-        	if (JMSLogMessage.TYPE.equals(prop) ||
-        	    JMSLogMessage.NAME.equals(prop) ||
-        	    JMSLogMessage.SEVERITY.equals(prop))
-        		continue;
-            if (batchProperty(message_id, content_id,
-                    prop, map.getString(prop)))
-                ++content_id;
-        }
-        insert_property_statement.executeBatch();
-        rdb_util.getConnection().commit();
-    }
+		final String type = map.getString(JMSLogMessage.TYPE);
+		final String name = map.getString(JMSLogMessage.NAME);
+		final String severity = map.getString(JMSLogMessage.SEVERITY);
 
-    /** @return Next available message ID
-     *  @throws Exception on error
-     */
-    private int getNextMessageID() throws Exception
-    {
-        final ResultSet result = next_message_id_statement.executeQuery();
-        if (result.next())
-            return result.getInt(1);
-        throw new Exception("Cannot obtain next message ID");
+        final Connection connection = rdb_util.getConnection();
+        try
+        {
+    		final long message_id = insertMessage(type, name, severity);
+
+            final Enumeration<String> props = map.getMapNames();
+            while (props.hasMoreElements())
+            {
+            	final String prop = props.nextElement();
+            	// Skip properties which are already in message table columns
+            	if (JMSLogMessage.TYPE.equals(prop) ||
+            	    JMSLogMessage.NAME.equals(prop) ||
+            	    JMSLogMessage.SEVERITY.equals(prop))
+            		continue;
+            	batchProperty(message_id, prop, map.getString(prop));
+            }
+            insert_property_statement.executeBatch();
+            connection.commit();
+        }
+        catch (Exception ex)
+        {
+            connection.rollback();
+            throw ex;
+        }
     }
 
     /** Insert a new message
-     *  @param message_id ID for the new message
      *  @param type  Message type
      *  @param name Primary name (PV name, ...) to which the msg refers
      *  @param severity Message severity
+     *  @return ID of the new message row
      *  @throws Exception on error
      */
-    private void insertMessage(final int message_id,
+    private long insertMessage(
     		final String type, String name,
     		final String severity) throws Exception
     {
+        long message_id = -1;
+        if (rdb_util.getDialect() == Dialect.Oracle)
+        {
+            // Read next unique message ID from sequence
+            final ResultSet result = next_message_id_statement.executeQuery();
+            if (result.next())
+                message_id = result.getInt(1);
+            else
+                throw new Exception("Cannot obtain next message ID");
+            result.close();
+            insert_message_statement.setLong(5, message_id);
+        }
+        // else: Depend on AUTO_INCREMENT resp. SERIAL for new ID, then read it after insert
+
         // Insert the main message
-        insert_message_statement.setInt(1, message_id);
         final Calendar now = Calendar.getInstance();
-        insert_message_statement.setTimestamp(2, new Timestamp(now.getTimeInMillis()));
-        insert_message_statement.setString(3, type);
+        insert_message_statement.setTimestamp(1, new Timestamp(now.getTimeInMillis()));
+        insert_message_statement.setString(2, type);
         // Overcome RDB limitations
         if (name == null)
             name = "";
@@ -320,13 +328,24 @@ public class RDBWriter
             CentralLogger.getInstance().getLogger(this).warn(
                 "Limiting NAME = '" + name + "' to " + MAX_NAME_LENGTH);
             name = name.substring(0, MAX_NAME_LENGTH);
-        }        
-        insert_message_statement.setString(4, name);
-        insert_message_statement.setString(5, severity);
+        }
+        insert_message_statement.setString(3, name);
+        insert_message_statement.setString(4, severity);
         final int rows = insert_message_statement.executeUpdate();
         if (rows != 1)
             throw new Exception("Inserted " + rows + " instead of 1 Message");
-        
+
+        if (rdb_util.getDialect() != Dialect.Oracle)
+        {
+            // Read auto-assigned unique message ID
+            final ResultSet result = insert_message_statement.getGeneratedKeys();
+            if (result.next())
+                message_id = result.getInt(1);
+            else
+                throw new Exception("Cannot obtain next message ID");
+            result.close();
+        }
+
         if (logger.isDebugEnabled())
         {
             logger.debug("Message " + message_id + ":");
@@ -335,27 +354,26 @@ public class RDBWriter
             logger.debug("  NAME          : " + name);
             logger.debug("  SEVERITY      : " + severity);
         }
+        return message_id;
     }
 
     /** Insert a property, add content to a message
      *  @param message_id ID of message to which this property belongs
-     *  @param content_id ID of message content entry for this prop/value
      *  @param property_id ID of the property type
      *  @param value Value of the property
      *  @throws Exception on error
      */
-    private boolean batchProperty(final int message_id, final int content_id,
+    private boolean batchProperty(final long message_id,
             final String property, String value) throws Exception
     {
         // Don't bother to insert empty properties
-        if (value.length() <= 0)
+        if (value == null  ||  value.isEmpty())
             return false;
-        
+
         final int property_id = getPropertyType(property);
-        
-        insert_property_statement.setInt(1, content_id);
-        insert_property_statement.setInt(2, message_id);
-        insert_property_statement.setInt(3, property_id);
+
+        insert_property_statement.setLong(1, message_id);
+        insert_property_statement.setInt(2, property_id);
         // Overcome RDB limitations
         if (value.length() > MAX_VALUE_LENGTH)
         {
@@ -363,22 +381,11 @@ public class RDBWriter
                 "Limiting " + property + " = '" + value + "' to " + MAX_VALUE_LENGTH);
             value = value.substring(0, MAX_VALUE_LENGTH);
         }
-        insert_property_statement.setString(4, value);
+        insert_property_statement.setString(3, value);
         insert_property_statement.addBatch();
-        
+
         if (logger.isDebugEnabled())
             logger.debug(String.format("  %-14s: %s", property, value));
         return true;
-    }
-    
-    /** @return Next available message ID
-     *  @throws Exception on error
-     */
-    private int getNextContentID() throws Exception
-    {
-        final ResultSet result = next_property_id.executeQuery();
-        if (result.next())
-            return result.getInt(1);
-        throw new Exception("Cannot obtain next content ID");
     }
 }
